macro-template/tests/ui/source_duplicate_placeholder.stderr
error: the placeholder `Ty` duplicates an earlier one
 --> tests/ui/source_duplicate_placeholder.rs:6:13
  |
6 |         for Ty in [u16] {
  |             ^^

error: an earlier placeholder `Ty` declared here
 --> tests/ui/source_duplicate_placeholder.rs:5:13
  |
5 |         for Ty in [u8],
  |             ^^
